# WCES

./: .gitignore  CLAUDE.md  README.md  apply-config.ps1  apply-config.sh  deploy.sh  wces.config.toml
.claude/: settings.json
docs/: API_REFERENCE.md  ESP32-C5 移植审计报告.md  ESP32-C5 移植指南.md  ML架构详解.md  PROGRESS.md  README_COMPETITION.md  固件官方文档审计报告.md  数据流审计报告.md  瑞萨 RZV2H 移植计划.md  瑞萨 RZ_G2L 移植计划.md  目录审计报告.md  硬件部署与使用指南.md  竞赛准备清单.md  竞赛差距分析.md  竞赛改造方案.md  端侧Agent开发计划.md  端侧Agent技术文档.md  端侧LLM技术文档.md  端侧LLM方案设计.md  解决问题.md  项目全览.md  项目完整分析报告.md
docs/triage-ui/: triage-v1.html  triage.html
docs/triage-ui/js/: triage-common.js
firmware/: build_firmware_c5.ps1
firmware/esp32-c5-csi-node/: CMakeLists.txt  README.md  build_firmware_c5.ps1  partitions_display.csv  provision.py  sdkconfig  sdkconfig.coverage  sdkconfig.defaults  sdkconfig.defaults.4mb  sdkconfig.defaults.competition  sdkconfig.defaults.template  sdkconfig.old  sdkconfig.qemu  sdkconfig.qemu.c5
firmware/esp32-c5-csi-node/components/wasm3/: CMakeLists.txt
firmware/esp32-c5-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  csi_collector.c  csi_collector.h  display_hal.c  display_hal.h  edge_processing.c  edge_processing.h  main.c  mmwave_sensor.c  mock_csi.c  mock_csi.h  ota_update.c  ota_update.h  power_mgmt.c  psk_auth.h  rvf_parser.c  stream_sender.c  swarm_bridge.c  wasm_runtime.c  wasm_runtime.h  wasm_upload.c
firmware/esp32-c5-csi-node/test/stubs/: esp_stubs.h
rust-server/: Cargo.toml
rust-server/crates/wifi-densepose-config/src/: lib.rs
rust-server/crates/wifi-densepose-hardware/: Cargo.toml
rust-server/crates/wifi-densepose-hardware/benches/: transport_bench.rs
rust-server/crates/wifi-densepose-hardware/src/: esp32_parser.rs
rust-server/crates/wifi-densepose-hardware/src/esp32/: mod.rs  tdm.rs
rust-server/crates/wifi-densepose-llm/: Cargo.toml
rust-server/crates/wifi-densepose-llm/data/: agent_kb.json  medical_knowledge.json
rust-server/crates/wifi-densepose-llm/data/prompts/: brief_analysis.txt  deep_analysis.txt  system.txt
rust-server/crates/wifi-densepose-llm/src/: agent.rs  config.rs  context.rs  degrade.rs  engine.rs  fallback.rs  gateway.rs  lib.rs  medical_kb.rs  medical_knowledge.rs  patient_record.rs  prompt.rs  prompt_builder.rs  risk_adjust.rs  router.rs  sliding_window.rs  streaming.rs  template.rs  types.rs  validator.rs
rust-server/crates/wifi-densepose-llm/tests/: integration.rs
rust-server/crates/wifi-densepose-mat/: Cargo.toml
rust-server/crates/wifi-densepose-mat/src/detection/: breathing.rs
rust-server/crates/wifi-densepose-mat/src/domain/: disaster_event.rs  survivor.rs  triage.rs
rust-server/crates/wifi-densepose-mat/src/integration/: csi_receiver.rs  neural_adapter.rs
rust-server/crates/wifi-densepose-mat/src/tracking/: kalman.rs  tracker.rs
rust-server/crates/wifi-densepose-nn/: Cargo.toml
rust-server/crates/wifi-densepose-sensing-server/: Cargo.toml
rust-server/crates/wifi-densepose-sensing-server/src/: adaptive_classifier.rs  alerting_bridge.rs  app_config.rs  cir_bridge.rs  dataset.rs  detection_bridge.rs  edge_module_engine.rs  field_bridge.rs  lib.rs  localization_bridge.rs  main.rs  mat_pipeline.rs  parser.rs  server.rs  signal_pipeline.rs  signal_processing.rs  sparse_inference.rs  state_ops.rs  tracking_bridge.rs  types.rs  vital_signs.rs  vitals_bridge.rs
rust-server/crates/wifi-densepose-sensing-server/src/handlers/: llm_routes.rs  mod.rs  model_routes.rs  path_util.rs  recording_routes.rs  routes.rs  ws.rs
rust-server/crates/wifi-densepose-sensing-server/src/tasks/: broadcast_tick.rs  mod.rs  simulated_data.rs  udp_receiver.rs
rust-server/crates/wifi-densepose-signal/: Cargo.toml
rust-server/crates/wifi-densepose-signal/src/: bvp.rs  csi_processor.rs  features.rs  fresnel.rs  hampel.rs  hardware_norm.rs  motion.rs  phase_sanitizer.rs  spectrogram.rs  subcarrier_selection.rs
rust-server/crates/wifi-densepose-signal/src/ruvsense/: cross_room.rs  mod.rs  multistatic.rs  pose_tracker.rs
rust-server/crates/wifi-densepose-vitals/src/: anomaly.rs  breathing.rs  heartrate.rs  store.rs  types.rs
rust-server/crates/wifi-densepose-wasm-edge/src/: lib.rs  med_gait_analysis.rs  med_seizure_detect.rs
rust-server/data/patients/: db  snap.0000000000000146  snap.0000000000000230  snap.00000000000003D9
scripts/: provision.py
ui/: README_CN.md  app.js  index.html  observatory.html  pose-fusion.html  style.css  triage.html  viz.html
ui/components/: DashboardTab.js  SensingTab.js
ui/js/: triage-common.js
ui/mobile/src/services/: ws.service.ts
ui/observatory/js/: figure-pool.js  pose-system.js
ui/services/: sensing.service.js
