[package]
name = "wifi-densepose-llm"
version.workspace = true
edition.workspace = true
description = "Edge LLM intelligent analysis engine for WCES field hospital triage"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation = "https://docs.rs/wifi-densepose-llm"
keywords = ["wifi", "llm", "triage", "edge-ai", "medical"]
categories = ["science", "web-programming"]
readme = "README.md"

[lib]
name = "wifi_densepose_llm"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Embedded database (patient records)
sled = "0.34"

# Utils
anyhow.workspace = true
tracing.workspace = true

# LLM inference (optional - full LLM mode, pinned to 0.8.x for GGUF support)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }

[features]
default = ["template-only"]
llm = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
template-only = []

[[test]]
name = "integration"
path = "tests/integration.rs"
