[package]
name = "wifi-densepose-llm"
version.workspace = true
edition.workspace = true
description = "Edge Medical Agent — Coordinator + cloud LLM API for WCES field hospital triage"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation = "https://docs.rs/wifi-densepose-llm"
keywords = ["wifi", "agent", "triage", "edge-ai", "medical"]
categories = ["science", "web-programming"]
readme = "README.md"

[lib]
name = "wifi_densepose_llm"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Embedded database (patient records)
sled = "0.34"

# Utils
anyhow.workspace = true
tracing.workspace = true

# Agent mode: cloud API gateway + streaming + validation
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"], optional = true }
tokio-stream = { version = "0.1", optional = true }
backoff = { version = "0.4", features = ["tokio"], optional = true }
regex = { version = "1", optional = true }

[features]
default = ["agent"]
agent = ["reqwest", "tokio-stream", "backoff", "regex"]
template-only = []

[[test]]
name = "integration"
path = "tests/integration.rs"
