[package]
name = "wifi-densepose-sensing-server"
version.workspace = true
edition.workspace = true
description = "Lightweight Axum server for WiFi sensing UI with RuVector signal processing"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation = "https://docs.rs/wifi-densepose-sensing-server"
keywords = ["wifi", "sensing", "server", "websocket", "csi"]
categories = ["web-programming::http-server", "science"]
readme = "README.md"

[lib]
name = "wifi_densepose_sensing_server"
path = "src/lib.rs"

[[bin]]
name = "sensing-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }
tokio = { workspace = true, features = ["full", "process"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Config file parsing
toml = "0.8"

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { workspace = true }

# Error handling
anyhow.workspace = true

# MAT triage pipeline (competition core)
wifi-densepose-mat = { version = "0.3.0", path = "../wifi-densepose-mat" }
wifi-densepose-signal = { version = "0.3.0", path = "../wifi-densepose-signal" }
wifi-densepose-core = { version = "0.3.0", path = "../wifi-densepose-core" }
wifi-densepose-vitals = { version = "0.3.0", path = "../wifi-densepose-vitals" }

# Numerical computing (CIR estimation)
ndarray = "0.15"
num-complex = "0.4"

# LLM intelligent analysis engine (competition P10)
wifi-densepose-llm = { version = "0.3.0", path = "../wifi-densepose-llm" }

[dev-dependencies]
tempfile = "3.10"
